fix(reporting): render PDF template with token replacement